outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_00-23-35/evaluations/problem_eval-6726171127000977210_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance later), centrality rewards (favoring nodes with lower average future distances), and penalizes outliers (nodes with distances significantly above average). It balances immediate proximity with future efficiency and centrality, adjusting weights based on remaining unvisited nodes.}
                    ^
SyntaxError: unmatched ')'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance later), centrality rewards (favoring nodes with lower average future distances), and penalizes outliers (nodes with distances significantly above average). It balances immediate proximity with future efficiency and centrality, adjusting weights based on remaining unvisited nodes.}
                    ^
SyntaxError: unmatched ')'
